--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
 
         <link rel="stylesheet" type="text/css" href="css/bootstrap-darkly.min.css">
 
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"</script>
         <script src="src/events.js"></script>
     </head>
     <body>
@@ -39,6 +40,7 @@
                 <div id="varpanel" class="panel panel-default fill" style="margin-right: 15px;">
                     <div class="panel-body">
                         <h2>Variables</h2>
+                        <canvas id="myChart" width="400" height="400"></canvas>
                     </div>
                 </div>
             </div>
